src/components/CardGroup.module.css
.cardgroup {
  display: grid;
  --utrecht-heading-2-font-size: 28px;
  grid-template-columns: var(--cardgroup-grid-template-columns);
  padding-block-end: var(--cardgroup-padding-block-end);
  padding-block-start: var(--cardgroup-padding-block-start);
  gap: var(--cardgroup-gap);
}

.cardgroup--small {
  --cardgroup-grid-template-columns: 1fr 1fr 1fr 1fr;
  --cardgroup-padding-block-end: 16px;
  --cardgroup-gap: 32px;
}

.cardgroup--medium {
  --cardgroup-grid-template-columns: 1fr 1fr;
  --cardgroup-padding-block-end: 40px;
  --cardgroup-gap: 32px;
}

.cardgroup--large {
  --cardgroup-padding-block-start: 24px;
  --cardgroup-padding-block-end: 36px;
  --cardgroup-grid-template-columns: 1fr;
  --cardgroup-gap: 24px;
}

.cardgroup__card {
  --utrecht-heading-2-margin-block-start: 0;
  --utrecht-heading-3-margin-block-start: 0;
  --utrecht-heading-4-margin-block-start: 0;
  --utrecht-heading-5-margin-block-start: 0;
  --utrecht-heading-6-margin-block-start: 0;

  box-sizing: border-box;
  display: flex;
  background-color: var(--cardgroup-card-background-color, var(--nlds-document-background-color, white));
  box-shadow: var(--cardgroup-card-box-shadow, 4px 4px #d1d1d1);
  border-width: var(--cardgroup-card-border-width, 1px);
  border-style: var(--cardgroup-card-border-style, solid);
  border-color: var(--cardgroup-card-border-color, #d1dfe3);
  color: var(--cardgroup-card-color, var(--nlds-document-color));
  flex-direction: var(--cardgroup-card-flex-direction, column);
  justify-content: var(--cardgroup-card-justify-content, space-between);
  align-content: var(--cardgroup-card-align-content, center);
  max-width: var(--cardgroup-card-max-width);
  min-height: var(--cardgroup-card-min-height);
  padding-block-start: var(--cardgroup-card-padding-block-start);
  padding-block-end: var(--cardgroup-card-padding-block-end);
}

.cardgroup__card--small {
  --cardgroup-card-box-shadow: none;
  --cardgroup-card-min-height: 90px;
  --cardgroup-card-justify-content: center;
}

.cardgroup__card--medium {
  --cardgroup-card-min-height: 286px;
}

.cardgroup__card--large {
  --cardgroup-card-flex-direction: row-reverse;
  --cardgroup-card-justify-content: space-between;
  --cardgroup-card-padding-block-start: var(--cardgroup-card-large-padding-block-start, 36px);
  --cardgroup-card-padding-block-end: var(--cardgroup-card-large-padding-block-end, 36px);
  --card-content-padding-block-end: 0;
}

.card__link {
  display: flex;
  height: 100%;
  justify-content: center;
}

.card__link:hover {
  box-shadow: 4px 4px #d1d1d1;
  border: 1px solid #d1dfe3;
}

.card__illustration {
  display: flex;
  justify-content: center;
  background-color: var(--card-illustration-background-color);
}

.card__illustration--background {
  --card-illustration-background-color: var(--nlds-document-inverse-background-color);
}

.card__content {
  padding-inline: var(--card-content-padding-inline, 24px);
  padding-block-start: var(--card-content-padding-block-start);
  padding-block-end: var(--card-content-padding-block-end, 36px);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100%;
}

@media (max-width: 996px) {
  .cardgroup--medium {
    min-height: fit-content;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
  }
}

@media (max-width: 768px) {
  .cardgroup--medium {
    grid-auto-flow: row;
    grid-template-columns: 1fr;
  }

  .cardgroup__card--large {
    --cardgroup-card-flex-direction: column;
    --cardgroup-card-padding-block-start: 0;
    --component-illustration-padding-inline: 0;
  }

  .cardgroup--small {
    --cardgroup-grid-template-columns: 1fr 1fr;
    --cardgroup-padding-block-end: 16px;
    --cardgroup-gap: 16px;
  }
}

